Fixed flex overlap issue in case study section

--- a/src/sass/elements/_case-study.scss
+++ b/src/sass/elements/_case-study.scss
@@ -19,16 +19,21 @@
         }
     }
 
-    .feature-case-study {   
+    .feature-case-study {  
+        position: relative;
         .flex-container {
             display: flex;
             padding: 2.5em 1.5em 1.5em 1.5em;
-            div {
+            width: 100%;
+            .case-text {
+                width: 50%;
                 padding: 0 2em 2em 2em;
+                margin-left: 1em;
+
             }
             .case-main-img{
                 width: 40%;
-                height:40%;
+
             }
             p {
                 margin-bottom: 1.5em;
@@ -89,22 +94,29 @@
     }        
 }
 
-@media (max-width: 820px){
+@media (max-width: 1280px){
     #case-study {    
         .bg-text {
             font-size: 110px;
             top: 30px;
         }
+        .btn-container { 
+            justify-content: center;
+            padding: 0.5em 0 2em 0;
+        }
         .feature-case-study {
             width: 90vw;
+            text-align: center;
             .flex-container {
                 padding: 2.5em 0 0 0;
                 flex-direction: column;
+                align-items: center;
                 .case-main-img {
                     width: 90%;
                     height: 90%;
                     margin: auto;
                 }
+                .case-text { width: 70%;}
                 .quote-row {
                     padding: 1.5em 0 1.5em 0;
                 }
