--- a/src/sass/elements/_subscribe.scss
+++ b/src/sass/elements/_subscribe.scss
@@ -29,6 +29,7 @@
 @media (max-width:820px) {
     #subscribe {
         margin: 1em 10% 1em 10%;
+        padding: 1em 0 3em 0;
         .email-subscribe div {
             flex-direction: column;
             text-align: center;
